# bank-deposits-odbc

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h
Gateways/: AccountGateway.cpp  AccountGateway.h  AddressGateway.cpp  AddressGateway.h  ClientGateway.cpp  ClientGateway.h  DepositGateway.cpp  DepositGateway.h  Gateway.cpp  Gateway.h
Models/: Account.cpp  Account.h  Address.cpp  Address.h  Client.cpp  Client.h  Deposit.cpp  Deposit.h
Tables/: AccountTable.cpp  AccountTable.h  AddressTable.cpp  AddressTable.h  ClientTable.cpp  ClientTable.h  DepositTable.cpp  DepositTable.h
